Fix condition to include 'turn' in speech recognition

--- a/examples/WebSpeechAPI/04_Babylon-3D-WebSpeech.html
+++ b/examples/WebSpeechAPI/04_Babylon-3D-WebSpeech.html
@@ -250,7 +250,7 @@
             console.log("認識結果:", s);
 
             if (
-              includesAny(s, ["回って", "まわって", "スピン", "回転", "turn"])
+              includesAny(s, ["回って", "まわって", "スピン", "回転"])
             ) {
               speak("回ります。");
               await spin360();
